# NovaUCI

./: .gitignore  CMakeLists.txt  README.md  build.bat  cmake.bat  setup_env.sh
TEST ENGINE/: Enginetester.py
src/: attacks.cpp  attacks.hpp  board.cpp  board.h  board.hpp  book.cpp  book.hpp  eval.cpp  eval.hpp  main.cpp  movegen.cpp  movegen.hpp  search.cpp  search.h  search.hpp  see.cpp  see.hpp  types.hpp  uci.cpp  uci.h
